[gd_scene load_steps=4 format=2]

[ext_resource path="res://globals/MessageBox.gd" type="Script" id=1]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": false,
"name": "open",
"speed": 35.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [  ]

[node name="MessageBox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpeechBubble" type="AnimatedSprite2D" parent="Control"]
position = Vector2( 320, 144 )
frames = SubResource( 4 )
animation = "open"

[node name="Label" type="Label" parent="Control"]
offset_left = 64.0
offset_top = 84.0
offset_right = 576.0
offset_bottom = 176.0
size_flags_vertical = 1
text = "This is my great delay?"
autowrap = true

[node name="Tween" type="Tween" parent="Control"]

[node name="Timer" type="Timer" parent="Control"]
one_shot = true

[node name="Head" type="AnimatedSprite2D" parent="Control"]
position = Vector2( 784, 144 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_MessageBox_visibility_changed"]
[connection signal="animation_finished" from="Control/SpeechBubble" to="." method="_on_SpeechBubble_animation_finished"]
